--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.1",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.15.2",
     "axios": "^1.6.7",
