Changes to be committed: 	modified:   client/index.html 	modified:   client/package.json 	modified:   client/src/.env 	modified:   client/src/api/config.ts 	modified:   client/src/api/createCard.ts 	modified:   client/src/components/Experience.tsx 	modified:   client/src/images/1710727550792nicole.jpg 	modified:   server/src/index.ts

--- a/client/src/.env
+++ b/client/src/.env
@@ -1,1 +1,2 @@
-VITE_API_URL = https://rvscholar.netlify.app/
+VITE_API_URL = https://rvscholar.netlify.app;
+# REACT_APP_BACKEND_URL = http://192.168.188.114:5000
