--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "http://192.168.188.114:5000",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
