--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.15.2",
     "axios": "^1.6.7",
     "bootstrap": "^5.2.3",
+    "firebase": "^10.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.73.6",
